# 05-chat

./: Cargo.toml  _typos.toml  cliff.toml  deny.toml  index.html
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: decoding.pem  encoding.pem
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs
chat_server/src/models/: mod.rs  user.rs
chat_server/src/utils/: jwt.rs
migrations/: 20241226045607_initial.sql
notify_server/: Cargo.toml
notify_server/src/: lib.rs  main.rs  sse.rs
src/: lib.rs  main.rs
